<resources>
    <string name="app_name">Bill Please</string>
    <string name="num_of_pax">Num of Pax</string>
    <string name="svs">SVS</string>
    <string name="no_svs">No SVS</string>
    <string name="gst">GST</string>
    <string name="no_gst">No GST</string>
    <string name="discount">Discount (%)</string>
    <string name="total_bill">Total Bill: $0.00</string>
    <string name="each_pays">Each Pays: $0.00</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>

</resources>
